unpackaged/main/default/objects/Product_Localization__c/Product_Localization__c.object-meta.xml
<CustomObject>
    <label>Product Localization</label>
    <nameField>
        <label>Product Localization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Localization__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>