unpackaged/main/default/objects/Product_Localization__c/fields/Back_in_stock_email_enabled__c.field-meta.xml
<CustomField>
    <fullName>Back_in_stock_email_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back in stock email enabled</label>
    <type>Checkbox</type>
</CustomField>