unpackaged/main/default/objects/Product_Localization__c/fields/Color_Group__c.field-meta.xml
<CustomField>
    <fullName>Color_Group__c</fullName>
    <label>Color Group</label>
    <length>250</length>
    <type>Text</type>
</CustomField>