unpackaged/main/default/objects/Product_Localization__c/fields/Color_Product__c.field-meta.xml
<CustomField>
    <fullName>Color_Product__c</fullName>
    <label>Color Product</label>
    <length>250</length>
    <type>Text</type>
</CustomField>