unpackaged/main/default/objects/Product_Localization__c/fields/CountryWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CountryWarehouse__c</fullName>
    <label>CountryWarehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>