unpackaged/main/default/objects/Product_Localization__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing</label>
    <length>250</length>
    <type>Text</type>
</CustomField>