unpackaged/main/default/objects/Product_Localization__c/fields/Imperial_Depth__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Depth__c</fullName>
    <label>Imperial Depth</label>
    <length>250</length>
    <type>Text</type>
</CustomField>