unpackaged/main/default/objects/Product_Localization__c/fields/Imperial_Height__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Height__c</fullName>
    <label>Imperial Height</label>
    <length>250</length>
    <type>Text</type>
</CustomField>