unpackaged/main/default/objects/Product_Localization__c/fields/Imperial_Width__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Width__c</fullName>
    <label>Imperial Width</label>
    <length>250</length>
    <type>Text</type>
</CustomField>