unpackaged/main/default/objects/Product_Localization__c/fields/Is_Preorder_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Preorder_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preorder Active</label>
    <type>Checkbox</type>
</CustomField>