unpackaged/main/default/objects/Product_Localization__c/fields/IsCustomizable__c.field-meta.xml
<CustomField>
    <fullName>IsCustomizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomizable</label>
    <type>Checkbox</type>
</CustomField>