unpackaged/main/default/objects/Product_Localization__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <label>Master Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>