unpackaged/main/default/objects/Product_Localization__c/fields/Metric_Depth__c.field-meta.xml
<CustomField>
    <fullName>Metric_Depth__c</fullName>
    <label>Metric Depth</label>
    <length>250</length>
    <type>Text</type>
</CustomField>