unpackaged/main/default/objects/Product_Localization__c/fields/Metric_Height__c.field-meta.xml
<CustomField>
    <fullName>Metric_Height__c</fullName>
    <label>Metric Height</label>
    <length>250</length>
    <type>Text</type>
</CustomField>