unpackaged/main/default/objects/Product_Localization__c/fields/Metric_Volume__c.field-meta.xml
<CustomField>
    <fullName>Metric_Volume__c</fullName>
    <label>Metric Volume</label>
    <length>250</length>
    <type>Text</type>
</CustomField>