unpackaged/main/default/objects/Product_Localization__c/fields/Metric_Weight__c.field-meta.xml
<CustomField>
    <fullName>Metric_Weight__c</fullName>
    <label>Metric Weight</label>
    <length>250</length>
    <type>Text</type>
</CustomField>