unpackaged/main/default/objects/Product_Localization__c/fields/Metric_Width__c.field-meta.xml
<CustomField>
    <fullName>Metric_Width__c</fullName>
    <label>Metric Width</label>
    <length>250</length>
    <type>Text</type>
</CustomField>