unpackaged/main/default/objects/Product_Localization__c/fields/Outside_Material__c.field-meta.xml
<CustomField>
    <fullName>Outside_Material__c</fullName>
    <label>Outside Material</label>
    <length>250</length>
    <type>Text</type>
</CustomField>