unpackaged/main/default/objects/Product_Localization__c/fields/Product_Image_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_1__c</fullName>
    <label>Product Image 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>