unpackaged/main/default/objects/Product_Localization__c/fields/ProductCollection__c.field-meta.xml
<CustomField>
    <fullName>ProductCollection__c</fullName>
    <label>ProductCollection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>