unpackaged/main/default/objects/Product_Localization__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ProductLocalization__c</relationshipLabel>
    <relationshipName>ProductLocalization_c</relationshipName>
    <type>Lookup</type>
</CustomField>