unpackaged/main/default/objects/Product_Localization__c/fields/ProductLink__c.field-meta.xml
<CustomField>
    <fullName>ProductLink__c</fullName>
    <label>ProductLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>