unpackaged/main/default/objects/Product_Localization__c/fields/ProductPriceCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceCurrency__c</fullName>
    <label>ProductPriceCurrency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>