unpackaged/main/default/objects/Product_Localization__c/fields/ProductPriceDisplay__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceDisplay__c</fullName>
    <label>ProductPriceDisplay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>