unpackaged/main/default/objects/Product_Localization__c/fields/ProductPriceValue__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceValue__c</fullName>
    <label>ProductPriceValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>