unpackaged/main/default/objects/Product_Localization__c/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <label>Sku</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>