unpackaged/main/default/objects/Product_Localization__c/fields/UK_product_localization__c.field-meta.xml
<CustomField>
    <fullName>UK_product_localization__c</fullName>
    <label>UK product localization</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>