unpackaged/main/default/objects/Product_Localization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sku__c</columns>
    <columns>ProductId__c</columns>
    <columns>Product_Image_1__c</columns>
    <columns>Product_Image_2__c</columns>
    <columns>Color_Image_Url__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sku__c</field>
        <operation>equals</operation>
        <value>97353004</value>
    </filters>
    <label>All</label>
</ListView>